# pycustomnets

./: README.md  def.py  pyproject.toml
examples/: CNN_test.py  MNIST_Digits.py  comparison.py  linearfunction.py
src/examples/: example.py
src/pycustomnets/: __init__.py  test.py
