[build-system]
requires = ["hatchling", "numpy"]
build-backend = "hatchling.build"

[project]
name = "pycustomnets"
version = "0.0.3"
authors = [
  { name="Raj", email="machinekeepslearning@gmail.com" },
]
description = "A Neural Network customization tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/machinekeepslearning/pyNets"
Issues = "https://github.com/machinekeepslearning/issues"
